Update title and favicon

--- a/index.html
+++ b/index.html
@@ -23,9 +23,8 @@
   <meta name="keywords" content="KEYWORDS SHOULD BE PLACED HERE">
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
-
-  <title>Academic Project Page</title>
-  <link rel="icon" type="image/x-icon" href="static/images/favicon.ico">
+  <title>Legibot: Generating Legible Motions for Service Robots Using Cost-Based Local Planners</title>
+  <link rel="icon" type="image/x-icon" href="static/images/robot_favicon.png">
   <link href="https://fonts.googleapis.com/css?family=Google+Sans|Noto+Sans|Castoro"
   rel="stylesheet">
 
