--- a/index.html
+++ b/index.html
@@ -51,21 +51,20 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">Academic Project Page</h1>
+            <h1 class="title is-1 publication-title">Legibot: Generating Legible Motions for Service Robots Using Cost-Based Local Planners</h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
               <span class="author-block">
-                <a href="FIRST AUTHOR PERSONAL LINK" target="_blank">First Author</a><sup>*</sup>,</span>
+                <a href="https://www.isir.upmc.fr/personnel/amirian/" target="_blank">Javad Amirian</a>,</span>
                 <span class="author-block">
-                  <a href="SECOND AUTHOR PERSONAL LINK" target="_blank">Second Author</a><sup>*</sup>,</span>
+                  <a href="https://www.isir.upmc.fr/personnel/mouad-abrini/" target="_blank">Mouad Abrini</a>,</span>
                   <span class="author-block">
-                    <a href="THIRD AUTHOR PERSONAL LINK" target="_blank">Third Author</a>
+                    <a href="https://www.isir.upmc.fr/personnel/chetouani/" target="_blank">Mohamed Chetouani</a>
                   </span>
                   </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block">Institution Name<br>Conferance name and year</span>
-                    <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
+                    <span class="author-block">Sorbonne University<br>RO-MAN 2024</span>
                   </div>
 
                   <div class="column has-text-centered">
