--- a/index.html
+++ b/index.html
@@ -146,7 +146,21 @@
         <h2 class="title is-3">Abstract</h2>
         <div class="content has-text-justified">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ullamcorper tellus sed ante aliquam tempus. Etiam porttitor urna feugiat nibh elementum, et tempor dolor mattis. Donec accumsan enim augue, a vulputate nisi sodales sit amet. Proin bibendum ex eget mauris cursus euismod nec et nibh. Maecenas ac gravida ante, nec cursus dui. Vivamus purus nibh, placerat ac purus eget, sagittis vestibulum metus. Sed vestibulum bibendum lectus gravida commodo. Pellentesque auctor leo vitae sagittis suscipit.
+            With the increasing presence of social robots in
+various environments and applications, there is an increasing
+need for these robots to exhibit socially-compliant behaviors.
+Legible motion, characterized by the ability of a robot to clearly
+and quickly convey intentions and goals to the individuals in
+its vicinity, through its motion, holds significant importance
+in this context. This will improve the overall user experience
+and acceptance of robots in human environments. In this
+paper, we introduce a novel approach to incorporate legibility
+into local motion planning for mobile robots. This can enable
+robots to generate legible motions in real-time and dynamic
+environments. To demonstrate the effectiveness of our proposed
+methodology, we also provide a robotic stack designed for
+deploying legibility-aware motion planning in a social robot,
+by integrating perception and localization components.
           </p>
         </div>
       </div>
@@ -276,7 +290,16 @@
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>BibTex Code Here</code></pre>
+      <pre><code>
+        @misc{amirian2024legibot,
+            title={Legibot: Generating Legible Motions for Service Robots Using Cost-Based Local Planners},
+            author={Javad Amirian and Mouad Abrini and Mohamed Chetouani},
+            year={2024},
+            eprint={2404.05100},
+            archivePrefix={arXiv},
+            primaryClass={cs.RO}
+        }
+      </code></pre>
     </div>
 </section>
 <!--End BibTex citation -->
