--- a/index.html
+++ b/index.html
@@ -120,20 +120,23 @@
 </section>
 
 
-<section class="hero is-small is-light">
-  <div class="hero-body">
-    <div class="container">
-      <h2 class="title">Figure 1</h2>
-      <iframe
-              src="static/pdfs/legibot_fig1.pdf" width="100%" height="550">
-      </iframe>
-      <h2 class="subtitle has-text-centered">
-        The proposed algorithm incorporates a similarity cost term that pushes
-        the planner to generate a path with lower similarity to the
-        unintended path &xi ˜ G 2 (in red), and it generates the dark green path at the top &xi G , which decreases the confusion for the
-        observer, and improves the legibility of the robot’s motion.
-      </h2>
-
+<section class="section hero is-small">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered">
+      <div class="column is-full">
+        <div class="content">
+          <h2 class="title is-3">Generating Legible Motions using Similarity Cost Function</h2>
+          <div class="level-set has-text-justified">
+            <p>
+             The proposed algorithm incorporates a similarity cost term that pushes
+             the planner to generate a path with lower similarity to the
+             unintended path (in red), and it generates the dark green path at the top, which decreases the confusion for the
+             observer, and improves the legibility of the robot’s motion.
+           </p>
+          </div>
+          <img src="static/pdfs/legibot_fig1.png" alt="Legibot: Generating Legible Motions using Similarity Cost Function" class="center-image">
+        </div>
+      </div>
     </div>
   </div>
 </section>
